--- a/src/components/accordion/_accordion.scss
+++ b/src/components/accordion/_accordion.scss
@@ -39,7 +39,9 @@ Accordion
 
     span {
       text-underline-position: under;
-      text-decoration: underline;
+      text-decoration-color: var(--color-contrast-high);
+      text-decoration-line: underline;
+      text-decoration-style: solid;
       text-decoration-thickness: 1px;
     }
 
